// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BudgetForm 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Budget Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placehoder="Budgeted Amount"
      type="text"
      value=""
    />
  </form>
</div>
`;

exports[`should render BudgetForm with a budget 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Budget Description"
      type="text"
      value="utilities"
    />
    <input
      onChange={[Function]}
      placehoder="Budgeted Amount"
      type="text"
      value="200"
    />
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <p>
      Please enter a description and amount.
    </p>
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Budget Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placehoder="Budgeted Amount"
      type="text"
      value=""
    />
  </form>
</div>
`;
